RESOLVED FIXED51205
Don't try to call plug-in member functions if the plug-in hasn't been initialized
https://bugs.webkit.org/show_bug.cgi?id=51205
Summary Don't try to call plug-in member functions if the plug-in hasn't been initial...
Anders Carlsson
Reported 2010-12-16 12:00:31 PST
Don't try to call plug-in member functions if the plug-in hasn't been initialized
Attachments
Patch (4.21 KB, patch)
2010-12-16 12:03 PST, Anders Carlsson
oliver: review+
Anders Carlsson
Comment 1 2010-12-16 12:00:48 PST
Anders Carlsson
Comment 2 2010-12-16 12:03:27 PST
Oliver Hunt
Comment 3 2010-12-16 12:05:54 PST
Comment on attachment 76797 [details] Patch r=me
Anders Carlsson
Comment 4 2010-12-16 12:08:12 PST
WebKit Review Bot
Comment 5 2010-12-16 15:39:58 PST
http://trac.webkit.org/changeset/74205 might have broken Leopard Intel Debug (Tests)
Note You need to log in before you can comment on or make changes to this bug.