Don't try to call plug-in member functions if the plug-in hasn't been initialized https://bugs.webkit.org/show_bug.cgi?id=51205 <rdar://problem/8730204>

Reviewed by Oliver Hunt.

Make sure that all PluginView functions that can be called while a plug-in has not been
initialized (if the plug-in page is in a background tab for example) have an additional
check for m_isInitialized.

* WebProcess/Plugins/PluginView.cpp:
(WebKit::PluginView::setWindowIsFocused):
(WebKit::PluginView::windowAndViewFramesChanged):
(WebKit::PluginView::platformLayer):
(WebKit::PluginView::scriptObject):
(WebKit::PluginView::privateBrowsingStateChanged):
(WebKit::PluginView::handleEvent):
(WebKit::PluginView::viewGeometryDidChange):
(WebKit::PluginView::setFocus):

git-svn-id: svn://svn.chromium.org/blink/trunk@74205 bbb929c8-8fbe-4397-9dbb-9b2b20218538